# lapsmith

./: .gitignore  DEVLOG.md  LICENSE  README.md
.claude/: launch.json  settings.json  settings.local.json
docs/: SETUP_LMU.md
engine/: pyproject.toml
engine/apex_engine/: __init__.py  analysis.py  main.py  recorder.py  schema.py  server.py  storage.py  track_data.py
engine/apex_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
engine/apex_engine/adapters/: __init__.py  base.py  sim.py
engine/apex_engine/adapters/lmu/: adapter.py  rf2_mmap.py
engine/apex_engine/importers/: lmu_results.py
scripts/: apex.ps1  dev.ps1  install-autostart.cmd  lapsmith.cmd  lapsmith.ps1  lmu.ps1  overlay.cmd  overlay.ps1
ui/: index.html  overlay.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/electron/: overlay-main.cjs
ui/src/: App.tsx  api.ts  main.tsx  theme.css
ui/src/components/: AnalysisView.tsx  Charts.tsx  CoachPanel.tsx  LapList.tsx  LiveMap.tsx  LiveStrip.tsx  LiveView.tsx  RacingLine.tsx  SessionsView.tsx  TrackMap.tsx
ui/src/overlay/: Overlay.tsx  main.tsx  overlay.css
