[project]
name = "apex-engine"
version = "0.1.0"
description = "Multi-sim racing telemetry engine: recording, lap analysis, live streaming"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apex_engine*"]
